--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "webpack build",
-    "build": "webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,10 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
   }
 }
